refactoring the views.py

--- a/templates/eve_holder/delete_account.html
+++ b/templates/eve_holder/delete_account.html
@@ -1,7 +1,6 @@
-{% extends 'eve_holder/main.html' %}
+{% extends 'eve_holder/main.html' %} {% block content %}
 
-{% block content %}
-    <body>
+<body>
 
     <div class="row">
         <div class="col-md-6">
@@ -16,5 +15,5 @@
         </div>
     </div>
 
-    </body>
+</body>
 {% endblock %}
