--- a/templates/eve_holder/accounts/login.html
+++ b/templates/eve_holder/accounts/login.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="row no-gutters">
             <div class="col-lg-5">
-                <img src="{% static "images/account/login.jpg" %}" class="img-fluid" style="height: 445px"
+                <img src="{% static "images/account/login.jpg" %}" class="img-fluid"
                      alt="Login side images">
             </div>
             <div class="col-lg-7 px-5 pt-3">
