--- a/templates/eve_holder/accounts/register.html
+++ b/templates/eve_holder/accounts/register.html
@@ -14,7 +14,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 </head>
-<body class="image" style="background-image: url({% static "images/account/register.jpg" %})">
+<body>
 <div class="container">
     <div class="regform">
         <h3>Register Form</h3>
@@ -54,15 +54,15 @@
                 <label class="col-md-2 col-form-label namecol">Phone: </label>
             </div>
             <div class="form-group col-md-6">
-                <input type="text" class="form-control my-3" name="phone_number"
-                       placeholder="Enter your Phone number here...">
+                <input type="text" class="form-control my-3 frame" name="phone_number"
+                    placeholder="Enter your Phone number here...">
             </div>
 
             <div class="form-group col-md-4">
                 <label class="col-md-2 col-form-label namecol">Usertype: </label>
             </div>
             <div class="form-group col-md-6">
-                <select class=" form-control my-3" name="type">
+                <select class=" form-control my-3 frame" name="type">
                     <option value="Visitors">Visitor</option>
                     <option value="Host">Host</option>
                 </select>
