--- a/static/css/register.css
+++ b/static/css/register.css
@@ -4,17 +4,12 @@
 }
 
 body {
-    /*background-image: url("../images/account/register.jpg");*/
-    background-position: center;
     max-height: 100%;
     max-width: 100%;
     display: block;
     object-fit: cover;
-}
-
-.image{
-    width: 100%;
-    height: 100%;
+    background: url("../images/account/register.jpg") no-repeat;
+    background-size: cover;
 }
 
 .regform {
@@ -24,7 +19,7 @@ body {
     padding: 10px 0 10px 0;
     text-align: center;
     border-radius: 15px 15px 0 0;
-    margin: 4.5% auto auto;
+    margin: 3.5% auto auto;
 }
 
 .main {
@@ -36,7 +31,7 @@ body {
 }
 
 .row {
-    margin: 4px auto auto;
+    margin: 3px 2px auto auto;
     width: 650px;
     color: white;
     font-weight: bold;
@@ -54,6 +49,13 @@ body {
 .namesm {
     color: white;
     font-size: 12px;
+}
+
+.frame {
+    font-size: 12px;
+    border-color: darkblue;
+    border-radius: 3px;
+    padding: 5px;
 }
 
 .btn-login {
