--- a/templates/eve_holder/notifications.html
+++ b/templates/eve_holder/notifications.html
@@ -1,5 +1,5 @@
 <div class="col-md">
-    <div class="card card-body scroll" style="height: 275px">
+    <div class=" scroll" style="height: 260px top: 10%">
         <h5>Notifications</h5>
         <hr>
 
