--- a/templates/eve_holder/hosts/host_my_account.html
+++ b/templates/eve_holder/hosts/host_my_account.html
@@ -16,7 +16,7 @@
         <div class="col-md-6">
             <div class="card card-body"
                  style="width: fit-content; margin: 3% auto auto;">
-                <img class="profile-pic" src="{{ request.user.host.profile_pic.url }}"
+                <img class="profile-pic" src="{{ host.profile_pic.url }}"
                      style="width: 350px;height: 180px" alt="host_profile_picture">
                 <hr>
                 <div class="row">
