--- a/static/css/login.css
+++ b/static/css/login.css
@@ -12,14 +12,16 @@ body {
     background: white;
     margin: 90px auto auto;
     width: 640px;
-    border-radius: 30px;
+    border-radius: 10px;
+    /*height: 450px;*/
 }
 
 
 img {
-    border-top-left-radius: 30px;
-    border-bottom-left-radius: 30px;
-    border-bottom: 30px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    min-height: 450px;
+
 }
 
 .btn1 {
