fix image field update bug

--- a/templates/eve_holder/visitors/visitor_update_information.html
+++ b/templates/eve_holder/visitors/visitor_update_information.html
@@ -7,7 +7,7 @@
                 <h5> Update Account Information: </h5>
                 <hr>
             </div>
-            <form action="" method="post">
+            <form action="" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div id="update-main">
                      <div class="col-md-12">
