can update all picture

--- a/templates/eve_holder/hosts/create_event.html
+++ b/templates/eve_holder/hosts/create_event.html
@@ -14,7 +14,7 @@
             <span style="font-size: 16px; font-weight: bold">Create Event Form</span>
         </div>
         <div class="main-create scroll">
-            <form action="" method="post">
+            <form action="" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
 
                 <div class="row row1">
