--- a/templates/eve_holder/visitors/visitor_update_information.html
+++ b/templates/eve_holder/visitors/visitor_update_information.html
@@ -40,7 +40,7 @@
                                 <label class="col-form-label update-label" style="font-weight:bold;">Phone Number: </label>
                             </div>
                             <div class="col-md-7 col-6">
-                                {{ visitor_form.phone_num }}
+                                {{ form.phone_num }}
                             </div>
                         </div>
                         <div class="row">
@@ -56,7 +56,7 @@
                                 <label class="col-form-label update-label" style="font-weight:bold;">Profile picture: </label>
                             </div>
                             <div class="col-md-7 col-6">
-                                {{ visitor_form.profile_pic }}
+                                {{ form.profile_pic }}
                             </div>
                         </div>
                         <hr>
