--- a/templates/eve_holder/hosts/host_my_account.html
+++ b/templates/eve_holder/hosts/host_my_account.html
@@ -14,7 +14,7 @@
         <div class="col-md-3"></div>
 
         <div class="col-md-6">
-            <div class="card card-body"
+            <div class="card card-body scroll"
                  style="width: fit-content; margin: 3% auto auto;">
                 <img class="profile-pic" src="{{ host.profile_pic.url }}"
                      style="width: 350px;height: 180px" alt="host_profile_picture">
