--- a/templates/eve_holder/visitors/visitor_my_account.html
+++ b/templates/eve_holder/visitors/visitor_my_account.html
@@ -10,10 +10,8 @@
 {% block content %}
     <div class="row">
         <div class="col-md-2"></div>
-
         <div class="col-md-4">
-            <div class="card card-body"
-                 style="width: fit-content; margin: 3% auto auto;">
+            <div class="card card-body scroll" style="width: fit-content; margin: 3% auto auto;">
                 <img class="profile-pic" src="{{ visitor.profile_pic.url }}"
                      style="width: 350px;height: 180px" alt="visitor_profile_pic">
                 <hr>
@@ -63,7 +61,7 @@
                     Account</a>
             </div>
         </div>
-        <div class="col-md-4 card card-body">
+        <div class="col-md-4 card card-body" style="height: 465px; top: 12px">
             {% include 'eve_holder/notifications.html' %}
         </div>
         <div class="col-md-2"></div>
