--- a/templates/eve_holder/visitors/visitor_update_information.html
+++ b/templates/eve_holder/visitors/visitor_update_information.html
@@ -9,7 +9,7 @@
             </div>
             <form action="" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
-                <div id="update-main">
+                <div id="update-main" class="scroll">
                      <div class="col-md-12">
                         <div class="row">
                             <div class="col-md-5 col-3">
