--- a/templates/eve_holder/delete_account.html
+++ b/templates/eve_holder/delete_account.html
@@ -3,19 +3,15 @@
 {% block content %}
     <body>
 
-    <div class="row container-delete">
-{#        <div style="align-self: center">#}
-{#            <div class="card card-body">#}
-                <form action="">
-                    {% csrf_token %}
-                    <div class="text">
-                        <p>Are you sure you want to delete this account ?</p>
-                        <input class="btn btn-danger" formmethod="post" type="submit" value="Yes">
-                        <a href="{{ previous_page }}" type="submit" class="btn btn-warning">No</a>
-                    </div>
-                </form>
-{#            </div>#}
-{#        </div>#}
+    <div class="container-delete">
+        <form action="">
+            {% csrf_token %}
+            <div class="text">
+                <p>{{ text }}</p>
+                <input class="btn btn-danger" formmethod="post" type="submit" value="Yes">
+                <a href="{{ previous_page }}" type="submit" class="btn btn-warning">No</a>
+            </div>
+        </form>
     </div>
 
     </body>
