--- a/static/css/main.css
+++ b/static/css/main.css
@@ -169,18 +169,18 @@ body {
 }
 
 .bottom{
-    height: 52vh;
+    height: 370px;
     background-color: #ffffff;
     border-radius: 0 0 10px 10px;
 }
 
-.login-element{
+.join-element{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.login-element h3{
+.join-element h3{
     margin-top: 18px;
     margin-left: 38%;
     color: #031b88;
@@ -207,11 +207,10 @@ body {
 }
 
 .join-label{
-    /*text-align: center;*/
     color: #031b88;
-    /*margin-top: -17px;*/
     margin-bottom: 0px;
     bottom: -10px;
+    margin-top: -5px;
 }
 
 /* update account style */
