--- a/templates/eve_holder/join_event.html
+++ b/templates/eve_holder/join_event.html
@@ -17,10 +17,10 @@
                 <div id="sentence-join">"The only impossible journey is the one you never begin."</div>
                 <div class="author-join">-Tony Robbins-</div>
             </div>
-            <img src="{% static "images/join_event.jpg" %}">
+            <img src="{% static "images/event/join_event.jpg" %}">
         </div>
         <div class="bottom scroll">
-            <div class="login-element">
+            <div class="join-element">
                 <form method="POST" action="">
                     {% csrf_token %}
                     <div class="col-sm-12" style="align-items: center"><h3>{{ event.event_name }}</h3></div>
