--- a/templates/eve_holder/hosts/host_my_account.html
+++ b/templates/eve_holder/hosts/host_my_account.html
@@ -59,8 +59,8 @@
                         {{ host.phone_num }}
                     </div>
                 </div>
-                <a class="btn btn-outline-info  btn-sm btn-block"
-                   href="{% url 'eve_holder:host_update_information' %}">Update Account</a>
+{#                <a class="btn btn-outline-info  btn-sm btn-block"#}
+{#                   href="{% url 'eve_holder:host_update_information' %}">Update Account</a>#}
                 <a class="btn btn-outline-danger  btn-sm btn-block" href="{% url 'eve_holder:delete_account' %}">Delete
                     Account</a>
             </div>
