--- a/templates/eve_holder/notifications.html
+++ b/templates/eve_holder/notifications.html
@@ -6,13 +6,13 @@
         {% for notify in notifications %}
             {% if notify.level == 'info' %}
                 <div class="info w3-animate-opacity w3-round msg-box">
-                    <strong>Info: </strong> {{ notify }}
+                    <strong>{{ notify }}</strong>
                     <a class="closebtn" href="{% url 'eve_holder:close_notification' notify.id %}"
                        onclick="this.parentElement.style.display='none';">&times;</a>
                 </div>
             {% elif notify.level == 'warning' %}
                 <div class="warning w3-animate-opacity w3-round msg-box">
-                    <strong>Warning: </strong> {{ notify }}
+                    <strong>{{ notify }}</strong> 
                     <a class="closebtn" href="{% url 'eve_holder:close_notification' notify.id %}"
                        onclick="this.parentElement.style.display='none';">&times;</a>
                 </div>
