--- a/templates/eve_holder/events/event_detail.html
+++ b/templates/eve_holder/events/event_detail.html
@@ -8,15 +8,15 @@
         <div class="row">
             <div class="col-12">
                 <div class="card">
-                    <div class="card-body">
+                    <div class="card-body" style="font-family: 'Commissioner', sans-serif;">
                         <div class="card-title mb-4">
                             <div class="d-flex justify-content-start">
                                 <div class="middle">
                                 </div>
                                 <div class="userData ml-3">
                                     <h2 class="d-block"
-                                        style="font-size: 1.5rem; font-weight: bold">{{ event.event_name }}</h2>
-                                    <h6 class="d-block">Host by: {{ host_name }}
+                                        style="font-size: 2rem; font-weight: bold; font-family: 'Commissioner', sans-serif;">{{ event.event_name }}</h2>
+                                    <h6 class="d-block" style="font-family: 'Commissioner', sans-serif;">Host by: {{ host_name }}
                                     </h6>
                                 </div>
                                 <div class="ml-auto">
