--- a/templates/eve_holder/hosts/host.html
+++ b/templates/eve_holder/hosts/host.html
@@ -10,7 +10,7 @@
             <div class="card card-body" style="font-family: 'Commissioner', sans-serif; align-self: center;">
                 <h3 style="font-family: 'Commissioner', sans-serif; color: #031b88;">My Events</h3>
                 <br>
-                <table class="table table-sm">
+                <table class="table table-hover">
                     <tr>
                         <th>Event Name</th>
                         <th>Event Date</th>
