--- a/templates/eve_holder/accounts/register.html
+++ b/templates/eve_holder/accounts/register.html
@@ -56,7 +56,7 @@
                         <label class="col-form-label namecol">Phone: </label>
                     </div>
                     <div class="form-group col-md-6 col-6">
-                        <input type="text" class="form-control my-3 frame" name="phone_number"
+                        <input type="number" min="1" class="form-control my-3 frame" name="phone_number"
                             placeholder="Enter your Phone number here...">
                     </div>
 
@@ -82,13 +82,6 @@
                     </div>
                     <div class="form-group col-md-6 col-6">
                         {{ form.password2 }}
-                    </div>
-
-                    <div class="form-group col-md-4 col-3">
-                        <label class="col-form-label namecol">Profile picture: </label>
-                    </div>
-                    <div class="form-group col-md-6 col-6" style="color: white">
-                        {{ pic.profile_pic }}
                     </div>
 
                     <hr>
