--- a/templates/eve_holder/visitors/visitor_registered_events.html
+++ b/templates/eve_holder/visitors/visitor_registered_events.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <link rel="stylesheet" type="text/css" href="{% static '/css/all_events.css' %}">
-    <body id="visitor-registered-event-body">
+    <body id="visitor-registered-event-body" style="background-color: #142850">
 
     <div class="above">
         <div class="inspiration-text">
