--- a/static/css/all_events.css
+++ b/static/css/all_events.css
@@ -13,6 +13,10 @@
     z-index: 2;
 }
 
+.container-fluid {
+    padding: 0;
+}
+
 body {
     font-family: 'Commissioner', sans-serif;
     min-height: 100vh;
