fix update button for host

--- a/templates/eve_holder/accounts/register.html
+++ b/templates/eve_holder/accounts/register.html
@@ -57,7 +57,7 @@
                     </div>
                     <div class="form-group col-md-6 col-6">
                         <input type="number" min="1" class="form-control my-3 frame" name="phone_number"
-                            placeholder="Enter your Phone number here...">
+                            placeholder="Enter your phone number here...">
                     </div>
 
                     <div class="form-group col-md-4 col-3">
