--- a/templates/eve_holder/host_and_visitor/event_detail.html
+++ b/templates/eve_holder/host_and_visitor/event_detail.html
@@ -135,8 +135,8 @@
                                                 {% else %}
                                                     <div class="row">
                                                     <div class="col-sm-3 col-md-2 col-5">
-{#                                                        <a class="btn btn-sm btn-danger"#}
-{#                                                           href="{% url 'eve_holder:event_cancel' event.id %}">Cancel</a>#}
+                                                        <a class="btn btn-sm btn-danger"
+                                                           href="{% url 'eve_holder:event_cancel' event.id %}">Cancel</a>
                                                     </div>
                                                 {% endif %}
                                             {% endif %}
