--- a/templates/eve_holder/accounts/login.html
+++ b/templates/eve_holder/accounts/login.html
@@ -49,7 +49,7 @@
                             <p id="messages">{{ message }}</p>
                         {% endfor %}
                         <hr>
-                        <p><a href="#">Forget Password</a> or <a href="{% url 'eve_holder:homepage' %}">Back</a></p>
+                        <p><a href="{% url 'eve_holder:homepage' %}">Go back to home page</a></p>
                         <p>Don't have an account? <a href="{% url 'eve_holder:register' %}">Register here</a></p>
                     </div>
                 </form>
