--- a/static/css/register.css
+++ b/static/css/register.css
@@ -8,7 +8,7 @@ body {
     max-width: 100%;
     display: block;
     object-fit: cover;
-    background: url("../images/account/register.jpg") no-repeat;
+    background: url("/images/account/register.jpg") no-repeat;
     background-size: cover;
 }
 
