--- a/templates/eve_holder/accounts/register.html
+++ b/templates/eve_holder/accounts/register.html
@@ -15,15 +15,14 @@
 
 </head>
 <body>
-<div class="container">
+<div class="container" style="background-image: url({% static '/images/account/register.jpg' %}) no-repeat;">
     <div class="regform">
         <h3>Register Form</h3>
     </div>
-    <!-- <div class="main"> -->
         <form method="POST" action="" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="main scroll">
-                <div calss="col-md-12">
+                <div class="col-md-12">
                     <div class="row">
                         <div class="form-group col-md-4 col-3">
                             <label for="" class="col-form-label namecol toppad">Name: </label>
@@ -103,6 +102,5 @@
             </div>
         </form>
     </div>
-</div>
 </body>
 </html>
