change the style location in register.html

--- a/static/css/register.css
+++ b/static/css/register.css
@@ -67,8 +67,7 @@ body {
     background-image: linear-gradient(120deg, #031b88, #2c6ed5);
     font-weight: bold;
     font-size: 14px;
-    margin: auto;
-    margin-left: 12%;
+    margin: auto auto auto 12%;
     border-radius: 20px;
 }
 
