--- a/templates/eve_holder/accounts/register.html
+++ b/templates/eve_holder/accounts/register.html
@@ -14,8 +14,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 </head>
-<body>
-<div class="container" style="background-image: url({% static '/images/account/register.jpg' %}) no-repeat;">
+<body style="background-image: url({% static '/images/account/register.jpg' %}) no-repeat;">
+<div class="container">
     <div class="regform">
         <h3>Register Form</h3>
     </div>
