--- a/templates/eve_holder/navbar.html
+++ b/templates/eve_holder/navbar.html
@@ -57,7 +57,7 @@
 
         <form class="form-inline my-2 my-lg-0" action="{% url 'eve_holder:search_event' %}" method="post">
             {% csrf_token %}
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search"
+            <input class="form-control mr-sm-2" type="search" placeholder="Search by event name" aria-label="Search" name="search"
                    style="font-family: 'Commissioner', sans-serif;">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit"
                     style="font-family: 'Commissioner', sans-serif;">Search
