--- a/templates/eve_holder/accounts/register.html
+++ b/templates/eve_holder/accounts/register.html
@@ -90,7 +90,7 @@
                         or <a href="{% url 'eve_holder:homepage' %}">Back to homepage</a>
                     </div>
                 </div>
-                <div class="form-row col-md-12">
+                <div class="form-row col-md-12" style="color: white;">
                     {% for message in messages %}
                         <p id="messages">{{ message }}</p>
                     {% endfor %}
