--- a/templates/eve_holder/accounts/login.html
+++ b/templates/eve_holder/accounts/login.html
@@ -1,71 +1,34 @@
 {% load static %}
-<!doctype html>
-<!--suppress HtmlFormInputWithoutLabel -->
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
-
-    <title>login</title>
+    <meta charset="UTF-8">
+    <title>Login - Cyber Ware</title>
+    <link href="{% static '/css/auth.css' %}" rel="stylesheet">
 </head>
 <body>
-<section class="Form my-7 mx-5">
-    <div class="container">
-        <div class="row no-gutters">
-            <div class="col-lg-5">
-                <img src="{% static "images/account/login.jpg" %}" class="img-fluid"
-                     alt="Login side images">
-            </div>
-            <div class="col-lg-7 px-5 pt-3">
-                <h3 class="font-weight-bold py-3">Login</h3>
-                <h5>Sign into your account</h5>
-                <form method="POST" action="">
-                    {% csrf_token %}
-                    <div class="form-row">
-                        <div class="col-lg-8">
-                            <input type="text" name="username" placeholder=" Username..." class="username my-3">
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="col-lg-8">
-                            <input type="password" name="password" placeholder=" Password..." class="username my-3">
-                        </div>
-                    </div>
-
-                    <div class="form-row">
-                        <div class="col-lg-9">
-                            <button type="submit" class="btn1 mt-3 mb-3">Login</button>
-                        </div>
-                    </div>
-
-                    <div class="form-row">
-                        {% for message in messages %}
-                            <p id="messages">{{ message }}</p>
-                        {% endfor %}
-                        <hr>
-                        <p><a href="{% url 'eve_holder:homepage' %}">Go back to home page</a></p>
-                        <p>Don't have an account? <a href="{% url 'eve_holder:register' %}">Register here</a></p>
-                    </div>
-                </form>
-            </div>
+<div class="container">
+    <form class="form" id="login" method="post">
+        <h1 class="form__title">Login</h1>
+        <div class="form__message form__message--error"></div>
+        <div class="form__input-group">
+            <input autofocus class="form__input" id="email" placeholder="Email" type="text">
+            <div class="form__input-error-message"></div>
         </div>
-    </div>
-</section>
+        <div class="form__input-group">
+            <input autofocus class="form__input" id="password" placeholder="Password" type="password">
+            <div class="form__input-error-message"></div>
+        </div>
+        <button class="form__button" type="submit" id="submitLogin">Continue</button>
+        <p class="form__text">
+            <a class="form__link" href="{% url 'eve_holder:homepage' %}">Back to main page</a>
+        </p>
+        <p class="form__text">
+            <a class="form__link" href="{% url 'eve_holder:register' %}" id="linkCreateAccount">Don't have an account? Create account</a>
+        </p>
+    </form>
+</div>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
+<script src="{% static '/js/login.js' %}"></script>
 </body>
 </html>
