link the login and register pages

--- a/templates/eve_holder/accounts/login.html
+++ b/templates/eve_holder/accounts/login.html
@@ -24,7 +24,8 @@
             <a class="form__link" href="{% url 'eve_holder:homepage' %}">Back to main page</a>
         </p>
         <p class="form__text">
-            <a class="form__link" href="{% url 'eve_holder:register' %}" id="linkCreateAccount">Don't have an account? Create account</a>
+            <a class="form__link" href="{% url 'eve_holder:register' %}" id="linkCreateAccount">Don't have an account?
+                Create account</a>
         </p>
     </form>
 </div>
