--- a/templates/eve_holder/accounts/signup.html
+++ b/templates/eve_holder/accounts/signup.html
@@ -34,7 +34,8 @@
             </div>
             <button class="form__button" type="submit" id="nextToMoreInfo">Next</button>
             <p class="form__text">
-                <a class="form__link" href="{% url 'eve_holder:login' %}" id="linkLogin">Already have an account? Sign in</a>
+                <a class="form__link" href="{% url 'eve_holder:login' %}" id="linkLogin">Already have an account? Sign
+                    in</a>
             </p>
         </div>
 
@@ -56,7 +57,8 @@
             </div>
             <button class="form__button" type="submit">Create Account</button>
             <p class="form__text">
-                <a class="form__link" href="{% url 'eve_holder:login' %}" id="linkLogin">Already have an account? Sign in</a>
+                <a class="form__link" href="{% url 'eve_holder:login' %}" id="linkLogin">Already have an account? Sign
+                    in</a>
             </p>
             <p class="form__text">
                 <a class="form__link" id="backToSignup">Back</a>
